--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <section class="container">
         <input type="text" id="input" class="input-text" >
         <div class="box">
-            <p class="text" id="paragraph-text"></p>
+            <p class="text" id="paragraph-text">dfs</p>
             <hr />
             <div class="box-2">
                 <p>Time Left: <span id="time"></span> </p>
@@ -22,7 +23,9 @@
         </div>
     </section>
 
+    
 
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    
 </body>
 </html>
