Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <section class="container">
         <input type="text" id="input" class="input-text" >
         <div class="box">
-            <p class="text" id="paragraph-text">dfs</p>
+            <p class="text" id="paragraph-text">kk</p>
             <hr />
             <div class="box-2">
                 <p>Time Left: <span id="time"></span> </p>
@@ -25,7 +24,7 @@
 
     
 
-    <script type="text/javascript" src="app.js"></script>
-    
+    <script type="text/javascript" charset="UTF-8" src="app.js"></script>
+
 </body>
 </html>
