completed the functioning

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <section class="container">
         <input type="text" id="input" class="input-text" >
         <div class="box">
-            <p class="text" id="paragraph-text">kk</p>
+            <p class="text" id="paragraph-text"></p>
             <hr />
             <div class="box-2">
-                <p>Time Left: <span id="time"></span> </p>
+                <p>Time Left: <span id="time">60 sec</span> </p>
                 <p>Mistakes: <span id="mistakes">0</span></p>
                 <p>WPM: <span id="wpm">0</span></p>
                 <p>CPM: <span id="cpm">0</span></p>
