feat: Add heading to the typing speed test page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <section class="container">
+        <h1 class="heading">Typing Speed Test</h1>
         <input type="text" id="input" class="input-text" >
         <div class="box">
             <p class="text" id="paragraph-text"></p>
